--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,16 @@
-<div id="app">
-  <p>You have <span></span> todos.</p>
-  <input type="text" #textInput />
-  <button type="button" (click)="addTodo(textInput)">Add todo</button>
-  <ul class="todos">
-    <li *ngFor="let item of collection">
-      {{ item.label }}
-      <button type="button">
-        Delete
-      </button>
-    </li>
-  </ul>
-  <button type="button" (click)="deleteTodo()" class="unsubscribe">
-    Unsubscribe
-  </button>
+<div class="app">
+  <div class="app__header">
+    <img src="/assets/img/logo.svg" class="app__logo" />
+  </div>
+  <div class="app__content">
+    <div class="app__nav">
+      <a routerLink="products" routerLinkActive="active">Products</a>
+    </div>
+    <div class="app__container">
+      <router-outlet></router-outlet>
+    </div>
+    <div class="app__footer">
+      <p>&copy; Ultimate Pizza Inc.</p>
+    </div>
+  </div>
 </div>
